--- a/game.css
+++ b/game.css
@@ -1,17 +1,41 @@
+@font-face {
+  font-family: tron;
+  src: url('lib/font/TRON.TTF');
+}
+
 *{
   background-color: rgb(36, 36, 36);
-  color: white;
+  color: rgb(0, 204, 255);
   text-align: center;
+  font-family: tron;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 #game {
-  border: 1px dashed;
+  border: 1px solid;
   margin: auto;
   display: block;
-  background:url(../img/)
+  background: center / cover url(./lib/img/tronpaper.png)
 }
 
 .main{
   display: grid;
-  grid-template-columns: 19rem 50rem 19rem;
+  grid-template-columns: 1fr 40rem 1fr;
+
+}
+
+h1 {
+  color: rgb(255, 255, 255);
+  position: relative;
+  z-index: 5;
+  text-shadow: 1px 5px 20px lightskyblue;
+  font-size: 3rem;
+  margin: 1rem 0;
+}
+
+h3{
+  font-size: 2.5rem;
 }
