--- a/game.css
+++ b/game.css
@@ -4,7 +4,6 @@
 }
 
 *{
-  background-color: rgb(36, 36, 36);
   color: rgb(0, 204, 255);
   text-align: center;
   font-family: tron;
@@ -14,28 +13,66 @@
   box-sizing: border-box;
 }
 
+body {
+  background: linear-gradient(rgb(36, 36, 36), rgb(51, 51, 51));
+}
+
+
 #game {
   border: 1px solid;
   margin: auto;
   display: block;
-  background: center / cover url(./lib/img/tronpaper.png)
+  background: linear-gradient(rgba(0, 247, 255, 0.041), rgba(0, 225, 255, 0.233)),
+  center / cover url(./lib/img/tronpaper.png);
+  transition: 10s;
 }
+
 
 .main{
   display: grid;
   grid-template-columns: 1fr 40rem 1fr;
-
 }
 
 h1 {
-  color: rgb(255, 255, 255);
   position: relative;
   z-index: 5;
-  text-shadow: 1px 5px 20px lightskyblue;
   font-size: 3rem;
   margin: 1rem 0;
+  text-decoration: underline;
 }
 
 h3{
   font-size: 2.5rem;
+}
+
+p{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 200;
+  font-size: 1rem;
+  letter-spacing: .5rem;
+  color: gray;
+}
+
+.fa-github{
+  color: gray;
+  font-size: 2rem;
+  padding-bottom: 2rem;
+}
+
+.fa-github:hover{
+  animation: 🦄 2s linear infinite;
+  color: rgb(255, 111, 255);
+  cursor: pointer;
+}
+
+@keyframes 🦄 {
+  0% {
+    filter: hue-rotate(-90deg);
+  }
+  50% {
+    filter: hue-rotate(90deg);
+  }
+  100% {
+    filter: hue-rotate(-90deg);
+  }
 }
