--- a/game.css
+++ b/game.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  background: linear-gradient(rgb(36, 36, 36), rgb(51, 51, 51));
+  background: linear-gradient(rgb(36, 36, 36), rgb(29, 29, 29))
 }
 
 
