--- a/game.css
+++ b/game.css
@@ -45,6 +45,10 @@ h3{
   font-size: 2.5rem;
 }
 
+.left-side h3, .left-side h4, .left-side span {
+  color: rgb(255, 255, 81)
+};
+
 p{
   font-family: 'Roboto', sans-serif;
   font-weight: 200;
