--- a/game.css
+++ b/game.css
@@ -14,7 +14,8 @@
 }
 
 body {
-  background: linear-gradient(rgb(36, 36, 36), rgb(29, 29, 29))
+  background: linear-gradient(rgba(36, 36, 36, 0.589), rgba(29, 29, 29, 0.281)),
+  center / cover url(./lib/img/tronpaper.jpg);
 }
 
 
@@ -78,4 +79,25 @@ p{
   100% {
     filter: hue-rotate(-90deg);
   }
+}
+
+ul{
+  margin-bottom: 3.5rem;
+}
+
+ul li{
+  display: inline;
+  padding: 0 3rem;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+
+}
+
+ul li:hover{
+  
+  filter: brightness(150%);
+  cursor: pointer;
+  
+
 }
