--- a/game.css
+++ b/game.css
@@ -37,7 +37,6 @@ body {
   left: 26.25rem;
   top: 7.6rem;
   font-family: 'Roboto', sans-serif;
-  visibility: show;
 }
 
 .hide {
@@ -131,3 +130,19 @@ ul li:hover{
   cursor: pointer;
 }
 
+.fa-caret-right{
+  padding-right: .5rem;
+  animation: bounce 1.5s infinite;
+}
+
+@keyframes bounce {
+  0% 20% 80% 100%{
+    transform: translateX(-5px);
+  }
+  40% {
+    transform: translateX(0);
+  }
+  60% {
+    transform: translateX(-5px);
+  }
+}
