--- a/game.css
+++ b/game.css
@@ -18,7 +18,6 @@ body {
   center / cover url(./lib/img/tronpaper.jpg);
 }
 
-
 #game {
   border: 1px solid;
   margin: auto;
@@ -99,7 +98,6 @@ p{
   font-size: 2rem;
 }
 
-
 ul{
   margin-bottom: 3.5rem;
 }
@@ -116,7 +114,6 @@ ul li:hover{
   filter: brightness(150%);
   cursor: pointer;
 }
-
 
 /* Silly magic */
 
@@ -144,13 +141,23 @@ ul li:hover{
 }
 
 @keyframes bounce {
-  0% 20% 80% 100%{
+  0%, 20%, 60%, 100%{
     transform: translateX(-5px);
   }
-  40% {
+  40%, 80% {
     transform: translateX(0);
   }
-  60% {
-    transform: translateX(-5px);
-  }
+}
+
+.left-side .controls p{
+  color: rgb(255, 255, 81)
+}
+
+.controls p{
+  font-family: 'Roboto', sans-serif;
+  font-size: 2rem;
+}
+
+.controls p:first-child{
+  padding-top: 5rem;
 }
