--- a/game.css
+++ b/game.css
@@ -104,9 +104,9 @@ ul{
 
 ul li{
   display: inline;
-  padding: 0 2rem;
+  padding: 15px;
   font-family: 'Roboto', sans-serif;
-  font-size: 1rem;
+  font-size: 1.5rem;
   text-transform: uppercase;
 }
 
